fix css property order and trim whitespace

--- a/site/stylesheets/scss/products.scss
+++ b/site/stylesheets/scss/products.scss
@@ -19,9 +19,9 @@
     padding: 0;
     @include respond-to(small-only) {
     margin: 0 auto;
-    float: none;
     max-width: 500px;
-    min-width: 445px;        
+    min-width: 445px;
+    float: none;        
     }
     @include respond-to(medium-only) {
     max-width: 500px;       
@@ -33,8 +33,8 @@
 }
 .wl-product {
     list-style: none;
-    float: left;
     padding: 0;
+    float: left;
     margin-left: 4px;
     .image {
         @include respond-to(small-only) {
@@ -42,10 +42,10 @@
             max-height:197px;     
         }
         @include respond-to(medium-only) {
-             min-width: 236px;  //prevents resizing in Safari when scaling page         
+            min-width: 236px;  //prevents resizing in Safari when scaling page         
         }
-        text-align: center;
         position: relative;
+        text-align: center;
         margin: 0 auto;
         width: 236px;
         height: 315px;
@@ -54,15 +54,14 @@
             }    
         } 
     .swatches {
-
       @include respond-to(small-only) {
         display:none;
       }
         list-style: none;
         margin: 0;
         dd {
-            float:left;
             margin: 0 2px 0 -4px;
+            float:left;
             line-height: 1.3;
             a {
                 text-decoration: none;
@@ -93,13 +92,13 @@
         } 
 }
 .quickview {
-    text-indent: -9999em;
-    display: inline-block;
     position: absolute;
     right: 3px;
     bottom: 6px;
+    display: inline-block;
     width: 33px;
     height: 33px; 
+    text-indent: -9999em; 
         &:hover {
             background: url("../../images/sprites.png") no-repeat;
             background-position: -40px -360px;
@@ -111,13 +110,13 @@
         }
 } 
 .video-link {
-    text-indent: -9999em;
-    display: inline-block;
     position: absolute;
+    display: inline-block;
     left: 6px;
     top: 6px;
     width: 25px;
     height: 25px;
+    text-indent: -9999em;
     background: transparent url("../../images/sprites.png") no-repeat;
     background-position: -307px -277px;
     z-index: 100;
@@ -128,13 +127,13 @@
     }          
 }
 .badge {
-    text-indent: -9999em;
-    display: inline-block;
     position: absolute;
+    display: inline-block;
     right: 3px;
     top: 6px;
     width: 37px;
     height: 37px;
+    text-indent: -9999em;
     background: transparent url("../../images/sprites.png") no-repeat;
     background-position: -75px -317px;
 }
@@ -204,43 +203,43 @@ li.first {
 }
 .wl-action { 
     position: absolute;
-    z-index: 99999;
     left: 705px;
+    z-index: 99999;
         input.wl-button { 
-            width: 80px;
             padding: 3px;
+            width: 80px;   
         }
 }
  .wl-form-options{
     @include respond-to(small-only) {
-        width: 238px;
         top: 90px;
-        height: auto;
         padding-bottom: 6px;
+        width: 238px;
+        height: auto;
         z-index: 100;
     }
     @include respond-to(medium-only) {
         min-width: 475px;
     }
     width: 470px;
-    float: left;
     height: 27px;
     margin: 0;
-    padding:0;
+    padding:0; 
+    float: left;
     background:$white;
 }
 .wl-list-styles-count {
     :before {
-        padding: 0;
-        background: url("../../images/borders/border-25.png") ;
-        content: '';
-        display: block;
-        position: absolute;
-        top: 1em;
+        position: absolute; 
+        top: 1em; 
+        display: block; 
         margin-left: -450px;
         margin-top: 48px;
+        padding: 0;
         height:1px;
         width: 450px;
+        background: url("../../images/borders/border-25.png") ;
+        content: '';
         z-index:-1;
         @include respond-to(medium-only) { 
             background: none;
@@ -256,10 +255,10 @@ li.first {
     float: right;
     list-style: none;
     .txt {
+        padding-left: 6px;
         font-family: $Serif;
         font-style:italic;
         color: $mediumGrey;
-        padding-left: 6px;
         background-color: $white;
     } 
 }
@@ -280,35 +279,34 @@ li.first {
             }
     }
     margin-right: 5px;
-    float: left;
     width: 151px;
     height: 20px;
+    float: left;
     z-index: 100;
     select {
-        -moz-appearance: button;  //* Firefox hides arrow */
-        text-indent: 5px;  //* Firefox hides arrow */
-        text-overflow: ''; //* Firefox hides arrow */
+        padding-left:16px;
+        width: 100%;
+        height:25px;
         -webkit-appearance: none; //* Safari   */    
         background:$white;
-        height:25px;
+        font-family: $Serif;
+        font-style: italic;
         border-width: 1px;
         border-style: solid;
         -moz-border-image:url("../../images/borders/border-50.png") 10 10 round; //* FFOx */ 
         -webkit-border-image:url("../../images/borders/border-50.png") 10 10 round; //* Safari   */
         -o-border-image:url("../../images/borders/border-50.png") 10 10 round; //* Opera */
         border-image:url("../../images/borders/border-50.png") 10 10 round;
-        width: 100%;
-        padding-left:16px;
-        font-family: $Serif;
-        font-style: italic;
+         -moz-appearance: button;  //* Firefox hides arrow */
+        text-indent: 5px;  //* Firefox hides arrow */
+        text-overflow: ''; //* Firefox hides arrow */  
     }   
     .arrow {
-        float: right;
-        display:  block;
         position: relative;
+        display:  block;
         margin: -15px 10px 0 0;
         width: 10px;
-        height: 6px;
+        height: 6px; float: right;
         background: transparent url("../../images/sprites.png") no-repeat;
         background-position: -80px -480px;
     }
